--- a/slides/index.html
+++ b/slides/index.html
@@ -149,7 +149,7 @@
 <ul>
 <li><p><strong>Isolated data scientists</strong></p></li>
 <li><p><strong>Closed</strong> and <strong>rigid</strong> IT/Dev environments</p>
-<p>👉 difficult to move to production</p></li>
+<p>👉 difficult to move innovation to production</p></li>
 </ul>
 <div class="columns">
 <div class="column" style="width:50%;">
@@ -166,38 +166,41 @@
 </div>
 </div></div>
 </section>
-<section id="when-infrastructure-stands-in-the-way-of-innovation-1" class="slide level2" data-background-image="background.svg" data-background-size="contain">
-<h2>When Infrastructure stands in the way of Innovation</h2>
-<ul>
-<li><p><strong>Isolated data scientists</strong></p></li>
-<li><p><strong>Closed</strong> and <strong>rigid</strong> IT/Dev environments</p>
-<p>👉 difficult to move to production</p></li>
-</ul>
-<div class="quarto-figure quarto-figure-right">
-<figure>
-<p><img data-src="img/stat_vs_it.png" class="quarto-figure quarto-figure-right" height="300"></p>
-</figure>
-</div>
-</section>
 <section id="many-innovation-opportunities" class="slide level2" data-background-image="background.svg" data-background-size="contain">
 <h2>Many innovation opportunities</h2>
 <ul>
-<li><strong>Efficient datascience</strong> stack: databases, automation, dataviz</li>
+<li><strong>Efficient datascience</strong> stack: libraries, databases, automation, dataviz, open standards</li>
 <li>Generalization of state-of-the-art <strong>open source tools</strong>
 <ul>
 <li>secure and <strong>well-supported</strong> by a community</li>
 <li><strong>interoperable</strong>, rely on <strong>standards</strong></li>
 </ul></li>
 <li>Non-traditional <strong>new (big) data sources</strong></li>
-<li>In the world fast-evolving <strong>AI/ML</strong></li>
-<li>Promote collaboration between diverse actors</li>
+<li>Fast-evolving <strong>AI/ML</strong> technologies</li>
+<li>Collaboration and knowledge sharing</li>
 <li>Build a community</li>
 </ul>
 </section>
 <section>
-<section id="how-to-achieve-this" class="title-slide slide level1 center" data-background-image="background.svg" data-background-size="contain">
-<h1>How to achieve this?</h1>
+<section id="ssp-cloud" class="title-slide slide level1 center" data-background-image="background.svg" data-background-size="contain">
+<h1>SSP Cloud</h1>
 
+</section>
+<section id="core-components" class="slide level2" data-background-image="background.svg" data-background-size="contain">
+<h2>Core components</h2>
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="img/onyxia-components.svg" class="quarto-figure quarto-figure-center" height="550"></p>
+</figure>
+</div>
+</section>
+<section id="an-extensive-catalog-of-services" class="slide level2" data-background-image="background.svg" data-background-size="contain">
+<h2>An extensive catalog of services</h2>
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="img/onyxia-catalog.svg" class="quarto-figure quarto-figure-center" height="550"></p>
+</figure>
+</div>
 </section>
 <section id="fundamental-principles" class="slide level2" data-background-image="background.svg" data-background-size="contain">
 <h2>Fundamental principles</h2>
@@ -206,17 +209,6 @@
 <p><img data-src="img/platform-believes2.svg" class="quarto-figure quarto-figure-center" height="600"></p>
 </figure>
 </div>
-</section>
-<section id="open-innovation" class="slide level2" data-background-image="background.svg" data-background-size="contain">
-<h2>Open innovation</h2>
-<p><br> Open Innovation acts as <strong>a bridge</strong> between internal teams and outside networks</p>
-<ul>
-<li><strong>Share</strong> knowledge and resources</li>
-<li>Wider pool of <strong>new ideas and technologies</strong></li>
-<li><strong>Mitigates risks</strong> associated with new product development</li>
-<li><strong>Cost savings</strong></li>
-<li>Higher-quality products that <strong>better meet users needs</strong></li>
-</ul>
 </section>
 <section id="fostering-best-practices" class="slide level2" data-background-image="background.svg" data-background-size="contain">
 <h2>Fostering best practices</h2>
@@ -272,27 +264,17 @@
 <div style="position: absolute; bottom: 1em; right: 1em;">
 <p><img src="img/student.png" style="height: 375px;"></p>
 </div>
-</section></section>
-<section>
-<section id="ssp-cloud" class="title-slide slide level1 center" data-background-image="background.svg" data-background-size="contain">
-<h1>SSP Cloud</h1>
-
 </section>
-<section id="core-components" class="slide level2" data-background-image="background.svg" data-background-size="contain">
-<h2>Core components</h2>
-<div class="quarto-figure quarto-figure-center">
-<figure>
-<p><img data-src="img/onyxia-components.svg" class="quarto-figure quarto-figure-center" height="550"></p>
-</figure>
-</div>
-</section>
-<section id="an-extensive-catalog-of-services" class="slide level2" data-background-image="background.svg" data-background-size="contain">
-<h2>An extensive catalog of services</h2>
-<div class="quarto-figure quarto-figure-center">
-<figure>
-<p><img data-src="img/onyxia-catalog.svg" class="quarto-figure quarto-figure-center" height="550"></p>
-</figure>
-</div>
+<section id="open-innovation" class="slide level2" data-background-image="background.svg" data-background-size="contain">
+<h2>Open innovation</h2>
+<p><br> Open Innovation acts as <strong>a bridge</strong> between internal teams and outside networks</p>
+<ul>
+<li><strong>Share</strong> knowledge and resources</li>
+<li>Wider pool of <strong>new ideas and technologies</strong></li>
+<li><strong>Mitigates risks</strong> associated with new product development</li>
+<li><strong>Cost savings</strong></li>
+<li>Higher-quality products that <strong>better meet users needs</strong></li>
+</ul>
 </section></section>
 <section id="practice-session" class="title-slide slide level1 center" data-background-image="background.svg" data-background-size="contain">
 <h1>Practice Session</h1>
@@ -315,16 +297,14 @@
 <section id="links" class="slide level2" data-background-image="background.svg" data-background-size="contain">
 <h2>Links</h2>
 <ul>
-<li><p><strong>Onyxia</strong>:</p>
+<li>The <a href="https://datalab.sspcloud.fr/">SSP Cloud</a></li>
+<li><a href="https://www.sspcloud.fr/catalog">Documentation</a></li>
+<li><strong>Onyxia</strong>:
 <ul>
 <li><a href="http://onyxia.sh/">Project website</a></li>
 <li><a href="https://join.slack.com/t/3innovation/shared_invite/zt-1hnzukjcn-6biCSmVy4qvyDGwbNI~sWg">Slack channel</a></li>
 </ul></li>
-<li><p><a href="https://hal.science/hal-04608636">Pre-print article</a> on Onyxia</p></li>
-<li><p>Open instance: <a href="https://datalab.sspcloud.fr/">SSP Cloud</a></p>
-<ul>
-<li>Try it!</li>
-</ul></li>
+<li><a href="https://hal.science/hal-04608636">Pre-print article</a> on Onyxia</li>
 </ul>
 </section>
 <section id="its-up-to-you-now" class="slide level2" data-background-image="background.svg" data-background-size="contain">
