--- a/slides/index.html
+++ b/slides/index.html
@@ -202,14 +202,6 @@
 </figure>
 </div>
 </section>
-<section id="fundamental-principles" class="slide level2" data-background-image="background.svg" data-background-size="contain">
-<h2>Fundamental principles</h2>
-<div class="quarto-figure quarto-figure-center">
-<figure>
-<p><img data-src="img/platform-believes2.svg" class="quarto-figure quarto-figure-center" height="600"></p>
-</figure>
-</div>
-</section>
 <section id="fostering-best-practices" class="slide level2" data-background-image="background.svg" data-background-size="contain">
 <h2>Fostering best practices</h2>
 <ul>
@@ -222,11 +214,30 @@
 <p><img data-src="img/best_practices.png" class="quarto-figure quarto-figure-center" height="350"></p>
 </figure>
 </div>
+</section>
+<section id="guiding-principles" class="slide level2" data-background-image="background.svg" data-background-size="contain">
+<h2>Guiding principles</h2>
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><img data-src="img/platform-believes2.svg" class="quarto-figure quarto-figure-center" height="600"></p>
+</figure>
+</div>
 </section></section>
 <section>
-<section id="use-cases" class="title-slide slide level1 center" data-background-image="background.svg" data-background-size="contain">
-<h1>Use cases</h1>
+<section id="open-innovation" class="title-slide slide level1 center" data-background-image="background.svg" data-background-size="contain">
+<h1>Open innovation</h1>
 
+</section>
+<section id="open-innovation-1" class="slide level2" data-background-image="background.svg" data-background-size="contain">
+<h2>Open innovation</h2>
+<p><br> Open Innovation acts as <strong>a bridge</strong> between internal teams and outside networks</p>
+<ul>
+<li><strong>Share</strong> knowledge and resources</li>
+<li>Wider pool of <strong>new ideas and technologies</strong></li>
+<li><strong>Mitigates risks</strong> associated with new product development</li>
+<li><strong>Cost savings</strong></li>
+<li>Higher-quality products that <strong>better meet users needs</strong></li>
+</ul>
 </section>
 <section id="use-case-promote-cooperation" class="slide level2" data-background-image="background.svg" data-background-size="contain">
 <h2>Use case: promote cooperation</h2>
@@ -264,17 +275,6 @@
 <div style="position: absolute; bottom: 1em; right: 1em;">
 <p><img src="img/student.png" style="height: 375px;"></p>
 </div>
-</section>
-<section id="open-innovation" class="slide level2" data-background-image="background.svg" data-background-size="contain">
-<h2>Open innovation</h2>
-<p><br> Open Innovation acts as <strong>a bridge</strong> between internal teams and outside networks</p>
-<ul>
-<li><strong>Share</strong> knowledge and resources</li>
-<li>Wider pool of <strong>new ideas and technologies</strong></li>
-<li><strong>Mitigates risks</strong> associated with new product development</li>
-<li><strong>Cost savings</strong></li>
-<li>Higher-quality products that <strong>better meet users needs</strong></li>
-</ul>
 </section></section>
 <section id="practice-session" class="title-slide slide level1 center" data-background-image="background.svg" data-background-size="contain">
 <h1>Practice Session</h1>
